squish resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1269,7 +1269,7 @@ input:focus-visible {
 #footer #logik-logo {
 	position: relative;
 	margin: 0 auto;
-	width: 100px; height: 59px;
+	width: 89px; height: 59px;
 	margin-bottom: 30px;
 }
 
